# betterbase-sync

./: .dockerignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  PARITY_MATRIX.md  PLAN.md  README.md  STATUS.md  justfile
.github/workflows/: docker.yml
bins/federation-keygen/: Cargo.toml
bins/federation-keygen/src/: main.rs
bins/migrate/: Cargo.toml
bins/migrate/src/: main.rs
bins/server/: Cargo.toml
bins/server/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: federation.rs  federation_http.rs  federation_quota.rs  files.rs  lib.rs  ws.rs
crates/api/src/federation_client/: mod.rs  peer.rs  tests.rs  wire.rs
crates/api/src/ws/: authz.rs  mod.rs  presence.rs  realtime.rs  rpc.rs  storage.rs  tests.rs
crates/api/src/ws/rpc/: deks.rs  epoch.rs  federation.rs  federation_auth.rs  federation_subscribe.rs  federation_sync.rs  frames.rs  handlers.rs  invitation.rs  membership_append.rs  membership_list.rs  membership_revoke.rs  mod.rs  pull_send.rs  push_helpers.rs  space_create.rs  token_refresh.rs
crates/app/: Cargo.toml
crates/app/src/: federation.rs  lib.rs
crates/auth/: Cargo.toml
crates/auth/benches/: ucan.rs
crates/auth/src/: did_key.rs  federation_token.rs  http_signature.rs  lib.rs  permission.rs  session.rs  ucan.rs
crates/auth/src/jwt/: jwks.rs  mod.rs  validator.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  spaceid.rs  validation.rs
crates/core/src/protocol/: cbor_value.rs  federation.rs  mod.rs  rpc.rs  types.rs  ws.rs
crates/realtime/: Cargo.toml
crates/realtime/benches/: events.rs  rpcconn.rs
crates/realtime/src/: lib.rs  runtime.rs
crates/realtime/src/broker/: config.rs  error.rs  mod.rs  multi.rs  subscriber.rs
crates/realtime/src/ws/: close_codes.rs  handshake.rs  mod.rs  protocol.rs
crates/storage/: Cargo.toml
crates/storage/benches/: postgres.rs
crates/storage/migrations/: 001_initial.sql  002_revocations.sql  003_invitations.sql  004_add_wrapped_dek.sql  005_files_record_id.sql  006_privacy_phase1.sql  007_mailbox_invitations.sql  008_ephemeral_rate_limits.sql  009_rewrap_epoch.sql  010_unified_cursor.sql  011_federation_keys.sql  012_federation_key_lifecycle.sql
crates/storage/src/: lib.rs  postgres.rs
crates/storage/src/postgres/: epochs.rs  federation.rs  files.rs  invitations.rs  membership.rs  mod.rs  rate_limit.rs  records.rs  revocation.rs  spaces.rs  test_support.rs
docker/: dev-entrypoint.sh  entrypoint.sh
