[package]
name = "less-sync-federation-keygen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
less-sync-auth = { path = "../../crates/auth" }
less-sync-storage = { path = "../../crates/storage" }
rand_core.workspace = true
tokio.workspace = true

[dev-dependencies]
sqlx.workspace = true
