[package]
name = "betterbase-sync-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Standalone database migration runner"

[dependencies]
anyhow.workspace = true
betterbase-sync-storage = { path = "../../crates/storage" }
tokio.workspace = true
