[package]
name = "betterbase-sync-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "betterbase-sync server binary"

[dependencies]
anyhow.workspace = true
betterbase-sync-app = { path = "../../crates/app" }
tokio.workspace = true
tracing-subscriber.workspace = true
