[package]
name = "less-sync-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
futures-util = "0.3"
less-sync-auth = { path = "../auth" }
less-sync-core = { path = "../core" }
less-sync-realtime = { path = "../realtime" }
less-sync-storage = { path = "../storage" }
object_store.workspace = true
serde.workspace = true
serde_cbor.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
http.workspace = true
jsonwebtoken.workspace = true
p256.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.28"
tower = "0.5"
