[package]
name = "betterbase-sync-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
futures-util = "0.3"
hex = "0.4"
hmac.workspace = true
http.workspace = true
betterbase-sync-auth = { path = "../auth" }
betterbase-sync-core = { path = "../core" }
betterbase-sync-realtime = { path = "../realtime" }
betterbase-sync-storage = { path = "../storage" }
object_store.workspace = true
rand_core.workspace = true
serde.workspace = true
sha2.workspace = true
minicbor-serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.28"
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonwebtoken.workspace = true
p256.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower = "0.5"
