[package]
name = "less-sync-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
less-sync-auth = { path = "../auth" }
less-sync-api = { path = "../api" }
less-sync-realtime = { path = "../realtime" }
less-sync-storage = { path = "../storage" }
object_store.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
