[package]
name = "less-sync-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
hex = "0.4"
less-sync-auth = { path = "../auth" }
less-sync-api = { path = "../api" }
less-sync-core = { path = "../core" }
less-sync-realtime = { path = "../realtime" }
less-sync-storage = { path = "../storage" }
minicbor-serde.workspace = true
object_store = { workspace = true, features = ["aws"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower = "0.5"
uuid.workspace = true
