[package]
name = "betterbase-sync-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
hex = "0.4"
betterbase-sync-auth = { path = "../auth" }
betterbase-sync-api = { path = "../api" }
betterbase-sync-core = { path = "../core" }
betterbase-sync-realtime = { path = "../realtime" }
betterbase-sync-storage = { path = "../storage" }
minicbor-serde.workspace = true
object_store = { workspace = true, features = ["aws"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower = "0.5"
uuid.workspace = true
