[package]
name = "less-sync-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bs58.workspace = true
hmac.workspace = true
p256.workspace = true
rand_core.workspace = true
sha2.workspace = true
thiserror.workspace = true
