[package]
name = "less-sync-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bs58.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
http.workspace = true
p256.workspace = true
rand_core.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
