[package]
name = "less-sync-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bs58.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
p256.workspace = true
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
criterion.workspace = true

[[bench]]
name = "ucan"
harness = false
