[package]
name = "betterbase-sync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Protocol types, space ID derivation, and validation"

[dependencies]
minicbor-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
