[package]
name = "betterbase-sync-realtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
betterbase-sync-auth = { path = "../auth" }
betterbase-sync-core = { path = "../core" }
betterbase-sync-storage = { path = "../storage" }
serde.workspace = true
minicbor-serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "events"
harness = false

[[bench]]
name = "rpcconn"
harness = false
