[package]
name = "less-sync-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
hmac.workspace = true
less-sync-core = { path = "../core" }
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "postgres"
harness = false
