[package]
name = "betterbase-sync-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
futures-util = "0.3"
hmac.workspace = true
betterbase-sync-core = { path = "../core" }
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio.workspace = true

[[bench]]
name = "postgres"
harness = false
